[package]
name = "wiesner"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "wiesner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- THE FORT KNOX ARSENAL ---
aes-gcm = "0.10"
argon2 = "0.5"
bip39 = "2.0"
zeroize = "1.8"
rand = "0.8"
hex = "0.4"

# --- ADDRESS DERIVATION ---
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
tiny-hderive = "0.3"

# --- NETWORK (V1: trusted RPC provider, not yet a verified light client) ---
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
